# rterminal

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
docs/: IMPROVEMENT_PLAN.md
research/: api-system-plan.md  terminal-implementation-research.md
src/: cli.rs  color.rs  debug_server.rs  history_log.rs  input.rs  input_log.rs  keyboard.rs  macos_ax.rs  main.rs  pty.rs  render.rs  snapshot_tab.rs  tabs.rs  terminal.rs  text_utils.rs
