[package]
name = "agent_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = { path = "vendor/alacritty_terminal" }
anyhow = "1"
async-channel = "2"
clap = { version = "4.5", features = ["derive"] }
cocoa = "0.26"
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "19c8363a8e0d8a2f7a7181bab2c14d87390c0f25", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "19c8363a8e0d8a2f7a7181bab2c14d87390c0f25", default-features = false, features = ["font-kit"] }
objc = "0.2"
parking_lot = "0.12"
portable-pty = "0.9.0"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
